--- a/src/app/widgets/filters/detail-filter/detail-filter.component.html
+++ b/src/app/widgets/filters/detail-filter/detail-filter.component.html
@@ -4,6 +4,7 @@
                         (completeMethod)="filter($event)" panelStyle="panel-style"
                         field="name"
                         [type]="'search'"
+                        (ngModelChange)="change()"
                         placeholder="выберете деталь"
                         (onClear)="clear()"
                         [dropdown]="true">
