--- a/src/app/widgets/filters/work-filter/work-filter.component.html
+++ b/src/app/widgets/filters/work-filter/work-filter.component.html
@@ -1,9 +1,12 @@
 <div class=" p-fluid  p-grid p-formgrid">
     <div class="p-field p-col-36 p-md-12">
-        <p-autoComplete (onSelect)="changeState()" [(ngModel)]="selected" [suggestions]="works"
+
+        <p-autoComplete
+                (onSelect)="changeState()" [(ngModel)]="selected" [suggestions]="works"
                         (completeMethod)="filter($event)" panelStyle="panel-style"
                         field="name"
                         placeholder="работа"
+                        [disabled]="this.filterService.workFilterEnable"
                         (onClear)="clear()"
                         [type]="'search'"
                         [dropdown]="true">
