--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,4 @@
 
-
 <app-master-start-window *ngIf="!apiService.isLoading"
                          [display]="masterWindowVisible"
                          (onCancelAction)="quit()"
@@ -32,10 +31,10 @@
                    [feedback]="false" pPassword/>
             </span>
         </div>
-<!--        <button pRipple pButton type="button" (click)="getUsers()"-->
-<!--                class=" p-button-danger"-->
-<!--                style="min-width: 8rem"-->
-<!--                [label]="'page.cancel' | translate" icon="pi pi-times"></button>-->
+        <button pRipple pButton type="button" (click)="getUsers()"
+                class=" p-button-danger"
+                style="min-width: 8rem"
+                [label]="'page.cancel' | translate" icon="pi pi-times"></button>
         <div class="login-row">
 
 
