--- a/src/app/menu-bar/menu-bar.component.html
+++ b/src/app/menu-bar/menu-bar.component.html
@@ -1,5 +1,7 @@
 <p-menubar id="openNav"
-           [model]="(orderService.getUserValidate() && apiService.getUserData()!==null && apiService.getUserData()!==undefined)?items:itemsNoLogin"
+           [model]="(orderService.getUserValidate() &&
+            apiService.getUserData()!==null &&
+            apiService.getUserData()!==undefined)?(screenWidth<800? (apiService.adminMode?itemsMinSizeAdmin:itemsMinSizeUser): items):itemsNoLogin"
            [style]="{zIndex:'999',background:'#f4f4f4',
 minWidth:'100%', height:'53px',position:'fixed',left:'0px',top:'0px'} "
 >
