--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -31,13 +31,13 @@
                    [feedback]="false" pPassword/>
             </span>
         </div>
-        <button pRipple pButton type="button" (click)="getUsers()"
-                class=" p-button-danger"
-                style="min-width: 8rem"
-                [label]="'page.cancel' | translate" icon="pi pi-times"></button>
+<!--        <button pRipple pButton type="button" (click)="getUsers()"-->
+<!--                class=" p-button-danger"-->
+<!--                style="min-width: 8rem"-->
+<!--                [label]="'page.cancel' | translate" icon="pi pi-times"></button>-->
+
+
         <div class="login-row">
-
-
             <button pRipple pButton type="button" (click)="cancel()"
                     class=" p-button-danger"
                     style="min-width: 8rem"
