--- a/src/app/table-page/table-page.component.scss
+++ b/src/app/table-page/table-page.component.scss
@@ -4,7 +4,9 @@
     display: none;
   }
 }
-
+.minHeightFilter{
+  height: 35px!important;
+}
 @media screen and (max-width: 40rem) {
 .icon{
   display: none!important;
