--- a/src/app/widgets/filters/work-item-filter-page/work-item-filter-page.component.html
+++ b/src/app/widgets/filters/work-item-filter-page/work-item-filter-page.component.html
@@ -1,4 +1,4 @@
-<div class=" p-fluid  p-grid p-formgrid">
+<div class=" p-fluid  p-grid p-formgrid" style="height: 20px">
     <div class="p-field p-col-36 p-md-12">
         <p-autoComplete (onSelect)="changeState()" [(ngModel)]="selected" [suggestions]="works"
                         (completeMethod)="filter($event)" panelStyle="panel-style"
