--- a/src/app/widgets/filters/work-period-filter/work-period-filter.component.html
+++ b/src/app/widgets/filters/work-period-filter/work-period-filter.component.html
@@ -1,5 +1,5 @@
 
-<div    class="p-fluid  p-grid p-formgrid" >
+<div    class="p-fluid  p-grid p-form grid" style="width: 300px">
     <div class="p-field p-col-36 p-md-12">
         <p-dropdown (onChange)="changePeriod()"
                     placeholder="период"
