--- a/src/app/widgets/filters/work-status-filter/work-status-filter.component.html
+++ b/src/app/widgets/filters/work-status-filter/work-status-filter.component.html
@@ -1,4 +1,4 @@
-<div class="p-fluid  p-grid p-formgrid">
+<div class="p-fluid  p-grid p-form grid" style="width: 300px">
     <div class="p-field p-col-36 p-md-12">
         <p-dropdown *ngIf="onlyField"
                     (onChange)="changeState()"  style="width: 300px" [showClear]="true"
