--- a/src/app/menu-bar/menu-bar.component.html
+++ b/src/app/menu-bar/menu-bar.component.html
@@ -5,6 +5,7 @@
            [style]="{zIndex:'999',background:'#f4f4f4',
 minWidth:'100%', height:'53px',position:'fixed',left:'0px',top:'0px'} "
 >
+    <span style="position: relative; top:-10px;left: -10px">BetaVersion 1.03</span>
     <p-button *ngIf="apiService.getUserData()!==null && apiService.getUserData()!==undefined"
               type="text" [style]="{minWidth:'40px',minHeight:'40px',
                   background:'#DC143C', borderColor:'#DC143C'}"
